# AOC_2023

./: pyproject.toml
day01/q1/: Trebuchet.py
day01/q2/: Trebuchet2.py
day02/q1/: Conundrum.py
day02/q2/: Conundrum2.py
day03/: Gear_Ratios.py  Gear_Ratios2.py
day04/q1/: scratchcards.py
day04/q2/: scratchcard2.py
day05/: p1.py  p2.py
day6/: Wait_For_It.py
